--- a/src/layouts/default.html
+++ b/src/layouts/default.html
@@ -19,11 +19,10 @@
 	{{!-- Pages you create in the src/pages/ folder are inserted here when the flattened page is created. --}}
 	{{> body}}
 
+  
   <script src="{{root}}assets/js/jquery-3.3.1.min.js"></script>
   <script src="{{root}}assets/js/foundation.min.js"></script>
-  <script src="{{root}}assets/js/scroll_spy.js"></script>
-  <script src="{{root}}assets/js/sticky-shrinknav.js"></script>
-  <script src="{{root}}assets/js/load.js"></script>
+  <script src="{{root}}assets/js/app.min.js"></script>
   <script>$(document).foundation();</script>
 
 </body>
