--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -7,14 +7,22 @@
 <div class="content grid-x">
 
 	<div class="photo cell medium-4 small-12">
-		<img src="{{root}}/assets/img/romain-rouault.png" alt="Photo Romain Rouault">
+		<img src="{{root}}assets/img/romain-rouault.jpg" alt="Photo Romain Rouault">
 	</div>
 
 	<div class="text cell medium-8 small-12">
 		<p>
-			Je suis autodidacte depuis plusieurs années et actuellement en formation à plein temps.<br/>
-			J’ai acquis la capacité de concevoir, développer et intégrer une application pour le web.<br/>
-			J’ai le goût et l’ambition d’étendre en permanence mes compétences.
+			Je suis un autodidacte issu d'un parcours littéraire et un ancien bibliothécaire spécialisé dans le numérique. J'entreprends une reconversion par passion pour le métier de développeur.
+		</p>
+
+		<p>
+			Je suis d'abord intéressé par les technologies front-end. Les problématiques d'UX m'intéressent et je suis adepte du "less is more". Mais j'ai rapidement l'ambition d'étendre mes compétences au back-end.
+			Je suis curieux de tout l'éventail des technologies et je choisis de suivre une formation diplômante spécialisée dans le langage PHP et le framework Symfony. 
+		</p>
+
+		<p>
+			Je suis enthousiasmé par les challenges et je suis tenace.
+			J’ai également le goût et l’ambition d’étendre en permanence mes compétences.
 		</p>
 	</div>
 
