--- a/src/partials/education.html
+++ b/src/partials/education.html
@@ -9,7 +9,7 @@
       <i class="fas fa-university" aria-hidden="true"></i>
     </div>
     <div class="timeline-content">
-      <p class="timeline-content-date">2012</h2>
+      <h4 class="timeline-content-date">2012</h4>
       <p>Fin de mes études à <a href="https://www.univ-amu.fr/">l'université d'Aix-Marseille</a>.<br/>Je suis diplômé en histoire contemporaine (master de recherche) et en “Métiers des bibliothèques et de la documentation” (master professionnel).</p>
     </div>
   </div>
@@ -19,8 +19,8 @@
       <i class="fas fa-book-reader" aria-hidden="true"></i>
     </div>
     <div class="timeline-content right">
-      <p class="timeline-content-date">2014</h2>
-      <p>Je deviens bibliothécaire multimédia dans le <a href="http://mediatheque.clamart.fr/">Réseau des médiathèques de Clamart</a>.</br>Parmi mes missions : l'administration et l'animation du portail web du Réseau, le développement d’un projet jeux vidéo (animations, acquisitions), la communication print, l'animation d’un espace multimédia (activités pédagogiques et ludiques), du service public, et la gestion et valorisation des collections numériques.</p>
+      <h4 class="timeline-content-date">2014</h4>
+      <p>Je deviens bibliothécaire multimédia dans le <a href="http://mediatheque.clamart.fr/">Réseau des médiathèques de Clamart</a>.<br/>Parmi mes missions : l'administration et l'animation du portail web du Réseau, le développement d’un projet jeux vidéo (animations, acquisitions), la communication print, l'animation d’un espace multimédia (activités pédagogiques et ludiques), du service public et la gestion et valorisation des collections numériques.</p>
     </div>
   </div>
 
@@ -29,13 +29,13 @@
       <i class="fas fa-code" aria-hidden="true"></i>
     </div>
     <div class="timeline-content">
-      <p class="timeline-content-date">2015</h2>
+      <h4 class="timeline-content-date">2015</h4>
       <p>
-        Début de mon apprentissage des technologies web en autodidacte et en parralèle de mon travail.<br/> L'école en ligne <a href="https://openclassrooms.com">OpenclassRooms</a> est alors ma principale source d'apprentissage. Je réalise des projets personnel (<a href="#portfolio">voir portfolio</a>) pour mettre en pratique mes apprentissages.
+        Début de mon apprentissage des technologies web en autodidacte et en parallèle de mon travail.<br/> L'école en ligne <a href="https://openclassrooms.com">OpenclassRooms</a> est alors ma principale source d'apprentissage. Je réalise des projets personnels (<a href="#portfolio">voir portfolio</a>) pour mettre en pratique mes apprentissages.
       </p>
       <aside>
-        <div class="accordion" data-accordion data-accordion data-allow-all-closed="true"> 
-          <span class="accordion-item" data-accordion-item>
+        <div class="accordion" data-accordion data-allow-all-closed="true"> 
+          <div class="accordion-item" data-accordion-item>
             <a href="#" class="accordion-title">Consulter mes certifications</a>
             <ul class="accordion-content" data-tab-content id="certifications">
 
@@ -60,7 +60,7 @@
               <li><a href="https://openclassrooms.com/fr/courses/4670706-adoptez-une-architecture-mvc-en-php">Adoptez une architecture MVC en PHP</a><a href="https://openclassrooms.com/fr/course-certificates/1651106447" target="_blank"><i class="fas fa-graduation-cap" aria-hidden="true"></i></a></li>
 
             </ul>
-          </li>
+          </div>
         </div>
       </aside>
     </div>
@@ -71,7 +71,7 @@
       <i class="fas fa-code-branch" aria-hidden="true"></i>
     </div>
     <div class="timeline-content right">
-      <p class="timeline-content-date">2018</h2>
+      <h4 class="timeline-content-date">2018</h4>
       <p>
         Je quitte mon emploi de bibliothécaire et je me consacre à temps plein au parcours diplômant de <a href="https://openclassrooms.com/fr/paths/59-developpeur-dapplication-php-symfony">"Développeur d’application - spécialité PHP/Symfony"</a> de l'école en ligne <a href="https://openclassrooms.com">OpenclassRooms</a>. 
       </p>
