--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -13,11 +13,11 @@
 
 		<div class="cell small-6 button-small-device" data-responsive-toggle="main-menu" data-hide-for="medium">
 		  <button class="menu-icon" type="button" data-toggle="main-menu">
-		  	<div id="close-button">
-		  		<svg width="19" height="20" viewBox="0 0 19 20" xmlns="http://www.w3.org/2000/svg">
+		  	<span id="close-button">
+		  		<svg width="30" height="25" viewBox="0 0 19 20" xmlns="http://www.w3.org/2000/svg">
 		  			<path d="M16.92 2.37L2.3 17M2.08 2.37L16.7 17" stroke-width="4" fill="none" stroke-linecap="square"></path>
 		  		</svg>
-		  	<div>
+		  	</span>
 		  </button>
 		</div>
 
