--- a/src/partials/includes/more-projects.html
+++ b/src/partials/includes/more-projects.html
@@ -1,67 +1,79 @@
-<div class="project-card cell medium-6 small-12 right-border" id="bib92">
+
+<div class="project-card cell medium-6 small-12 right-border" id="generateur">
 	<div class="grid-y grid-padding-y text-center">
-		<h4>Bib92</h4>
+		<h4>Générateur de code HTML/CSS</h4>
 			<div class="screen-project-wrapper">
-				<a class="project-details" id="-modal">
-					<img class="screen-project" src="assets/img/project/screen-bib92.png" alt="site bib92 screenshot"/>
+				<a class="project-details" id="generateur-modal" data-open="project-details">
+					<img class="screen-project" src="assets/img/project/generateur/screen-generator-1.jpg" alt="Screenshot de l'outil 'générateur de code HTML/CSS'"/>
 					<span class="image-hover-wrapper-reveal">
-				      <p>En savoir plus<br><i class="fas fa-eye" aria-hidden="true"></i></p>
+				      <p>En savoir plus</br><i class="fas fa-eye" aria-hidden="true"></i></p>
 				    </span>
 				</a>
 			</div>
 		<img class="screen-laptop" src="assets/img/screen-laptop-low.png" alt=""/>
-	    <p class="project-description text-left">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce sodales diam ac hendrerit aliquet. Phasellus pretium libero vel molestie maximus. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam quis est quam. Aenean blandit a urna laoreet tincidunt.</p>
+			<div class="project-description text-left">
+		    	<p>Petit outil réalisé pour le <i>Réseau des médiathèques de Clamart</i> afin de faciliter le travail des rédacteurs sur le site web.</p>
+		    	<p>Développé entièrement en JavaScript avec la librarie <i>jQuery</i>.</p>
+		    </div>
 	</div>
-	<div class="full reveal" id="project-details--modal" data-reveal></div>
 </div>
 
-<div class="project-card cell medium-6 small-12 left-border" id="bib92">
+<div class="project-card cell medium-6 small-12 left-border" id="festival">
 	<div class="grid-y grid-padding-y text-center">
-		<h4>Bib92</h4>
+		<h4>Festival des Films de Plein Air</h4>
 			<div class="screen-project-wrapper">
-				<a class="project-details" id="bib92-modal">
-					<img class="screen-project" src="assets/img/project/screen-bib92.png" alt="site bib92 screenshot"/>
+				<a class="project-details" id="festival-modal" data-open="project-details">
+					<img class="screen-project" src="assets/img/project/festival/screen-festival-1.jpg" alt="Screenshot du site éFestival des Films de Plein Air""/>
 					<span class="image-hover-wrapper-reveal">
-				      <p>En savoir plus<br><i class="fas fa-eye" aria-hidden="true"></i></p>
+				      <p>En savoir plus</br><i class="fas fa-eye" aria-hidden="true"></i></p>
 				    </span>
 				</a>
 			</div>
 		<img class="screen-laptop" src="assets/img/screen-laptop-low.png" alt=""/>
-	    <p class="project-description text-left">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce sodales diam ac hendrerit aliquet. Phasellus pretium libero vel molestie maximus. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam quis est quam. Aenean blandit a urna laoreet tincidunt.</p>
+			<div class="project-description text-left">
+		    	<p>Site fictif d'un festival de cinéma. Il est le résultat d'un projet réalisé dans le cadre de ma formation sur l'école en ligne <i>OpenclassRooms</i>.</p>
+		    	<p>Le site est semi-fonctionnel, il s'agit avant tout d'une maquette avancée du site potentiel. Il est développé avec le framework <i>Bootstrap</i>.</p>
+		    </div>
 	</div>
-	<div class="full reveal" id="project-details-bib92-modal" data-reveal></div>
 </div>
 
-<div class="project-card cell medium-6 small-12 right-border" id="bib92">
+
+<div class="project-card cell medium-6 small-12 right-border" id="portfolio">
 	<div class="grid-y grid-padding-y text-center">
-		<h4>Bib92</h4>
+		<h4>Portfolio</h4>
 			<div class="screen-project-wrapper">
-				<a class="project-details" id="bib92-modal">
-					<img class="screen-project" src="assets/img/project/screen-bib92.png" alt="site bib92 screenshot"/>
+				<a class="project-details" id="portfolio-modal" data-open="project-details">
+					<img class="screen-project" src="assets/img/project/portfolio/screen-portfolio-1.jpg" alt="Screenshot du Portfolio"/>
 					<span class="image-hover-wrapper-reveal">
-				      <p>En savoir plus<br><i class="fas fa-eye" aria-hidden="true"></i></p>
+				      <p>En savoir plus</br><i class="fas fa-eye" aria-hidden="true"></i></p>
 				    </span>
 				</a>
 			</div>
 		<img class="screen-laptop" src="assets/img/screen-laptop-low.png" alt=""/>
-	    <p class="project-description text-left">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce sodales diam ac hendrerit aliquet. Phasellus pretium libero vel molestie maximus. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam quis est quam. Aenean blandit a urna laoreet tincidunt.</p>
+			<div class="project-description text-left">
+		    	<p>Le présent Portfolio est un site statique simple, léger, facilement maintenable et évolutif.</p>
+		    	<p>Développé avec le framework <i>Foundation for Sites</i>.</p>
+		    </div>
 	</div>
-	<div class="full reveal" id="project-details-bib92-modal" data-reveal></div>
 </div>
 
-<div class="project-card cell medium-6 small-12 left-border" id="bib92">
+<div class="project-card cell medium-6 small-12 left-border" id="snowtricks">
 	<div class="grid-y grid-padding-y text-center">
-		<h4>Bib92</h4>
+		<h4>SnowTricks</h4>
 			<div class="screen-project-wrapper">
-				<a class="project-details" id="bib92-modal">
-					<img class="screen-project" src="assets/img/project/screen-bib92.png" alt="site bib92 screenshot"/>
+				<a class="project-details" id="snowtricks-modal" data-open="project-details">
+					<img class="screen-project" src="assets/img/project/snowtricks/screen-snowtricks-1.jpg" alt="Logo du framework Symfony"/>
 					<span class="image-hover-wrapper-reveal">
-				      <p>En savoir plus<br><i class="fas fa-eye" aria-hidden="true"></i></p>
+				      <p>En savoir plus</br><i class="fas fa-eye" aria-hidden="true"></i></p>
 				    </span>
 				</a>
 			</div>
 		<img class="screen-laptop" src="assets/img/screen-laptop-low.png" alt=""/>
-	    <p class="project-description text-left">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce sodales diam ac hendrerit aliquet. Phasellus pretium libero vel molestie maximus. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam quis est quam. Aenean blandit a urna laoreet tincidunt.</p>
+			<div class="project-description text-left">
+		    	<p>Site développé avec le framework PHP <i>Symfony</i> et respectant le pattern ADR. Projet réalisé dans le cadre de ma formation sur l'école en ligne <i>OpenclassRooms</i>.</p>
+		    	<p>Développement en cours.</p>
+		    </div>
 	</div>
-	<div class="full reveal" id="project-details-bib92-modal" data-reveal></div>
 </div>
+
+
