--- a/src/partials/portfolio.html
+++ b/src/partials/portfolio.html
@@ -12,62 +12,74 @@
 					<h4>Bib92</h4>
 						<div class="screen-project-wrapper">
 							<a class="project-details" id="bib92-modal" data-open="project-details">
-								<img class="screen-project" src="assets/img/project/bib92/screen-bib92-1.png" alt="site bib92 screenshot"/>
-								<span class="image-hover-wrapper-reveal">
+								<img class="screen-project" src="{{root}}assets/img/project/bib92/screen-bib92-1.jpg" alt="Screenshot site BiB92"/>
+								<div class="image-hover-wrapper-reveal">
 							      <p>En savoir plus<br><i class="fas fa-eye" aria-hidden="true"></i></p>
-							    </span>
+							    </div>
 							</a>
 						</div>
-					<img class="screen-laptop" src="assets/img/screen-laptop-low.png" alt=""/>
-				    <p class="project-description text-left">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce sodales diam ac hendrerit aliquet. Phasellus pretium libero vel molestie maximus. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam quis est quam. Aenean blandit a urna laoreet tincidunt.</p>
+					<img class="screen-laptop" src="{{root}}assets/img/screen-laptop-low.png" alt=""/>
+					<div class="project-description text-left">
+				    	<p>Site de l'association des bibliothèques des Hauts-de-Seine <i>BiB92</i>.</p>
+				    	<p> Conception et développement d'un template sur le CMS <i>Joomla</i> avec le framework <i>Bootstrap</i>. Conseils, migration des données, graphisme, intégration et maintenance.</p>
+					</div>
 				</div>
 			</div>
 
-			<div class="project-card cell medium-6 small-12 left-border" id="boob92">
+			<div class="project-card cell medium-6 small-12 left-border" id="cca-mail">
 				<div class="grid-y grid-padding-y text-center">
-					<h4>Boob92</h4>
+					<h4>Newsletter - Médiathèques CCA</h4>
 						<div class="screen-project-wrapper">
-							<a class="project-details" id="boob92-modal" data-open="project-details">
-								<img class="screen-project" src="assets/img/project/bib92/screen-bib92-1.png" alt="site bib92 screenshot"/>
-								<span class="image-hover-wrapper-reveal">
+							<a class="project-details" id="cca_mail-modal" data-open="project-details">
+								<img class="screen-project" src="{{root}}assets/img/project/cca-mail/screen-cca-mail-1.jpg" alt="Screenshot Newsletter des médiathèques de CCA"/>
+								<div class="image-hover-wrapper-reveal">
 							      <p>En savoir plus<br><i class="fas fa-eye" aria-hidden="true"></i></p>
-							    </span>
+							    </div>
 							</a>
 						</div>
-					<img class="screen-laptop" src="assets/img/screen-laptop-low.png" alt=""/>
-				    <p class="project-description text-left">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce sodales diam ac hendrerit aliquet. Phasellus pretium libero vel molestie maximus. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam quis est quam. Aenean blandit a urna laoreet tincidunt.</p>
+					<img class="screen-laptop" src="{{root}}assets/img/screen-laptop-low.png" alt=""/>
+					<div class="project-description text-left">
+				    	<p>Un template de newsletter responsive réalisé pour <i>Le réseau des médiathèques de Concarneau Cornouaille Agglomération</i>.</p>
+				    	<p>Conception et développement avec le framework <i>Foundations for Emails</i>.</p>
+				    </div>
 				</div>
 			</div>
 
-			<div class="project-card cell medium-6 small-12 right-border" id="">
+			<div class="project-card cell medium-6 small-12 right-border" id="blog">
 				<div class="grid-y grid-padding-y text-center">
-					<h4>Bib92</h4>
+					<h4>Blog</h4>
 						<div class="screen-project-wrapper">
-							<a class="project-details" id="bib92-modal">
-								<img class="screen-project" src="assets/img/project/bib92/screen-bib92-1.png" alt="site bib92 screenshot"/>
-								<span class="image-hover-wrapper-reveal">
+							<a class="project-details" id="blog-modal" data-open="project-details">
+								<img class="screen-project" src="{{root}}assets/img/project/blog/screen-blog-1.jpg" alt="Screenshot du blog de Romain Rouault"/>
+								<div class="image-hover-wrapper-reveal">
 							      <p>En savoir plus<br><i class="fas fa-eye" aria-hidden="true"></i></p>
-							    </span>
+							    </div>
 							</a>
 						</div>
-					<img class="screen-laptop" src="assets/img/screen-laptop-low.png" alt=""/>
-				    <p class="project-description text-left">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce sodales diam ac hendrerit aliquet. Phasellus pretium libero vel molestie maximus. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam quis est quam. Aenean blandit a urna laoreet tincidunt.</p>
+					<img class="screen-laptop" src="{{root}}assets/img/screen-laptop-low.png" alt=""/>
+					<div class="project-description text-left">
+				    	<p>Blog personnel, résultat d'un projet réalisé dans le cadre de ma formation sur l'école en ligne <i>OpenclassRooms</i>.</p>
+				    	<p>Entiérement réalisé en PHP vanilla, intégré avec le framework <i>Bootstrap</i> avec back-end pour la gestion des articles et des commentaires.</p>
+				    </div>
 				</div>
 			</div>
 
-			<div class="project-card cell medium-6 small-12 left-border" id="">
+			<div class="project-card cell medium-6 small-12 left-border" id="chaletsWP">
 				<div class="grid-y grid-padding-y text-center">
-					<h4>Bib92</h4>
+					<h4>Chalets & Caviar</h4>
 						<div class="screen-project-wrapper">
-							<a class="project-details" id="bib92-modal">
-								<img class="screen-project" src="assets/img/project/bib92/screen-bib92-1.png" alt="site bib92 screenshot"/>
-								<span class="image-hover-wrapper-reveal">
+							<a class="project-details" id="chaletsWP-modal" data-open="project-details">
+								<img class="screen-project" src="{{root}}assets/img/project/chalets/screen-chalets-1.jpg" alt="Screenshot du site Chalets & Caviar"/>
+								<div class="image-hover-wrapper-reveal">
 							      <p>En savoir plus<br><i class="fas fa-eye" aria-hidden="true"></i></p>
-							    </span>
+							    </div>
 							</a>
 						</div>
-					<img class="screen-laptop" src="assets/img/screen-laptop-low.png" alt=""/>
-				    <p class="project-description text-left">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce sodales diam ac hendrerit aliquet. Phasellus pretium libero vel molestie maximus. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam quis est quam. Aenean blandit a urna laoreet tincidunt.</p>
+					<img class="screen-laptop" src="{{root}}assets/img/screen-laptop-low.png" alt=""/>
+						<div class="project-description text-left">
+					    	<p>Site fictif d'une agence immobilière de luxe. Il est le résultat d'un projet réalisé dans le cadre de ma formation sur l'école en ligne <i>OpenclassRooms</i>.</p>
+					    	<p>Simple override d'un thème <i>WordPress</i>, intégration/hack de plugins et style.</p>
+					    </div>
 				</div>
 			</div>
 			
