--- a/src/partials/technologie.html
+++ b/src/partials/technologie.html
@@ -13,7 +13,7 @@
 				<h4>Langages</h4>
 			</div>
 			<ul class="tech-list-content">
-				<li>PHP/MySql</li>
+				<li>PHP/MySQL</li>
 				<li>HTML/CSS</li>
 				<li>Javascript</li>
 			</ul>
@@ -71,12 +71,11 @@
 				<li>Git</li>
 				<li>Twig</li>
 				<li>Saas</li>
+				<li>Less</li>
 				<li>UML</li>
 				<li>Ubuntu</li>
 			</ul>
 		</div>
 	</li>
 		
-	</li>
-
 </ul>
