--- a/src/assets/scss/custom/custom.scss
+++ b/src/assets/scss/custom/custom.scss
@@ -18,6 +18,9 @@
 //------------------------------------------------------------------------------------------------------------------------------
 // 1. Global
 // ---------
+.orbit{
+  visibility: hidden;
+}
 
 .align-center{
   -webkit-justify-content: center;
@@ -42,14 +45,20 @@ h1, h2, h3{
 h3{
   color : $secondary-color;
 }
-  
+
+button{
+      outline: none;
+}
+
 .button{
   border: rem-calc(3) solid $primary-color;
   transition : border 2s ease;
+  
 
     :hover{
       color : $mypurple;
     }
+
 }
 
 .accordion-title::before{
@@ -390,10 +399,15 @@ section{
     border-top : 2px solid $secondary-color;
 
       p{
-        padding : rem-calc(20);
         transform : translateX(rem-calc(20));
         transition: all 0.7s ease;
+
+        &:nth-child(1){
+          margin-top: rem-calc(20);
+        }
+
       }
+
   }
 
   &.active{
@@ -732,7 +746,8 @@ section{
           color: $white;
           display: inline;
           height: 100%;
-          margin-left: -100%;
+          top: 0;
+          left: 0;
           opacity: 0;
           position: absolute;
           width: 100%;
@@ -768,9 +783,13 @@ section{
       }
     }
 
-    p.project-description {
-      font-size: 12px;
-      padding : rem-calc(10 0 10 0);
+    .project-description {
+      font-size: rem-calc(13);
+      padding : rem-calc(25 0 10 0);
+
+      p{
+        margin-bottom: rem-calc(5);
+      }
     }
   }
 
@@ -1126,7 +1145,7 @@ section{
     transition : all 0.5s ease-out;
 
     &:hover{
-      color: $mypurple;
+      border-color: $mypurple;
       transition : all 0.5s ease-out;
     }
   }
@@ -1154,8 +1173,21 @@ section{
       padding-right: rem-calc(5);
       border-right: 2px solid $mypurple;
 
-      .project-details-text p{
+      .project-details-text{
+
+      p{
         font-size: rem-calc(14);
+      }
+
+      a{
+          color: darken($primary-color, 25%);
+          transition: all 0.4s ease;
+
+          &:hover{
+            color : $mypurple;
+            transition: all 0.4s ease;
+          }
+      }
       }
     }
   }
@@ -1188,6 +1220,10 @@ section{
       margin : rem-calc(0 20);
       transition : border-color 0.5s ease-out;
     }
+
+    a{
+      color: initial;
+    }
   }
 
 }
@@ -1195,4 +1231,11 @@ section{
 button:hover{
   border-color: $mypurple;
   transition : border-color 0.5s ease-out;
+}
+
+#mentions_legales{
+
+  a{
+      color: darken($primary-color, 35%);
+    }
 }
