--- a/src/partials/includes/more-projects.html
+++ b/src/partials/includes/more-projects.html
@@ -13,7 +13,7 @@
 		<img class="screen-laptop" src="assets/img/screen-laptop-low.png" alt=""/>
 			<div class="project-description text-left">
 		    	<p>Petit outil réalisé pour le <i>Réseau des médiathèques de Clamart</i> afin de faciliter le travail des rédacteurs sur le site web.</p>
-		    	<p>Développé entièrement en JavaScript avec la librarie <i>jQuery</i>.</p>
+		    	<p>Développé entièrement en JavaScript avec la librairie <i>jQuery</i>.</p>
 		    </div>
 	</div>
 </div>
