--- a/src/partials/portfolio.html
+++ b/src/partials/portfolio.html
@@ -86,6 +86,8 @@
 			<div id="more-projects" class="align-center">
 				<a class="button" id="more-projects-button">Voir plus de projets</a>
 			</div>
+			<div class="loader text-center" style="display: none; margin : auto;"><img src="{{root}}assets/img/ajax-loader.gif" aria-hidden="true"></div>
+
 		</div>
 
 	</div>
