--- a/src/partials/technologie.html
+++ b/src/partials/technologie.html
@@ -70,7 +70,7 @@
 			<ul class="tech-list-content">
 				<li>Git</li>
 				<li>Twig</li>
-				<li>Saas</li>
+				<li>Sass</li>
 				<li>Less</li>
 				<li>UML</li>
 				<li>Ubuntu</li>
