--- a/src/assets/scss/custom/_myMixin.scss
+++ b/src/assets/scss/custom/_myMixin.scss
@@ -1,5 +1,5 @@
 @mixin hexa-icon($color) {
-  background:  url("../img/hexagon-simple-" + $color +".svg");
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 190 220' width='190' height='220'%3E%3Cpolygon fill='%"+$color+"' stroke='%"+$color+"' stroke-miterlimit='10' points='95,1.7 188.5,55.8 188.5,164.2 95,218.3 1.5,164.2 1.5,55.8' /%3E%3C/svg%3E");
   background-repeat: no-repeat;
   background-size: contain;
   background-position: center;
